--- a/output.css
+++ b/output.css
@@ -1,3 +1,12 @@
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  min-height: 100vh;
+}
 
 /*# sourceMappingURL=output.css.map */
