--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,4 +1,17 @@
+*, *:before, *:after {
+    box-sizing: inherit;
+  }
+
 body {
-    
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    min-height: 100vh;
+
 }
+
+//// HEADER ////
+
+
  
+
