--- a/scss/_resets.scss
+++ b/scss/_resets.scss
@@ -1,17 +1,12 @@
 *, *:before, *:after {
     box-sizing: inherit;
-  }
+  };
+  
 
 body {
     margin:0;
     padding:0;
     box-sizing: border-box;
     min-height: 100vh;
-
 }
-
-//// HEADER ////
-
-
- 
 
