--- a/output.css
+++ b/output.css
@@ -9,16 +9,32 @@ body {
   min-height: 100vh;
 }
 
+* {
+  font-family: "Roboto Mono", monospace;
+}
+
 .header {
   display: flex;
   width: 100%;
   justify-content: space-around;
   align-items: center;
   background-color: #f5ecd3;
+  font-weight: 600;
 }
 
 .header img {
   width: 100px;
+}
+
+.header ul {
+  display: flex;
+  gap: 30px;
+  list-style-type: none;
+}
+
+.header a {
+  text-decoration: none;
+  color: #db5808;
 }
 
 /*# sourceMappingURL=output.css.map */
