--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -8,6 +8,7 @@ $bg: rgb(255, 255, 255);
 
 * {
     font-family: 'Roboto Mono', monospace;
+    
 }
 
 //// HEADER ////
@@ -47,6 +48,110 @@ $bg: rgb(255, 255, 255);
  
 //// HERO //// 
 
+.hero {
+    background-color: $primary-color;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 40vh;
+}
+
+.hero-wrapper {
+    display: flex;
+    margin-top: 50px;
+    gap: 200px;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 60px;
+}
+
+.hero-text {
+    width: 500px;
+}
+
+.hero {
+    img {
+        height: auto;
+        width: 600px;
+        border: 10px solid $text-color;
+        
+        
+    }
+}
 
 
+.hero {
+    h1 {
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+        margin-bottom: 0;
+        
+    }
+}
+
+.hero {
+    p {
+        opacity: 80%;
+        font-weight: 400;
+    
+    }
+}
+
+.hero {
+    button {
+        color: $text-color !important;
+        text-transform: uppercase;
+    }
+}
+
+//// INFORMATION //// 
+
+.information {
+    min-height: 55vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.information {
+    img {
+        border: 10px solid #db5808;
+        border-radius: 20px;
+        width: 180px;
+    }
+}
+
+.information { 
+    h1 {
+        text-align: center;
+        margin-bottom: 100px;
+        font-weight: 700;
+    }
+}
+
+.information-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 60px;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 250px;
+    
+}
+
+.card {
+    p {
+        text-align: center;
+        max-width: 240px;
+    }
+}
+
+//// QUOTE //// 
 
