--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -155,3 +155,31 @@ $bg: rgb(255, 255, 255);
 
 //// QUOTE //// 
 
+.quote {
+    display: flex;
+    background-color: #f5ecd3;
+    min-height: 55vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.quote-content {
+    width: 800px;
+}
+
+.quote-content {
+    h1 {
+        font-weight: 400;
+    }
+}
+
+.quote-author {
+    text-align: end;
+}
+
+.quote-author {
+    h2 {
+        font-weight: 700;
+    }
+}
