--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,15 +1,42 @@
 @use 'resets';
 
+
+//// VARIABLES ////
+
 $primary-color: #f5ecd3;
 $secondary-color: #cb9972;
 $text-color: #db5808;
+$border: 10px solid hsla(23, 93%, 45%, 0.486);
+$button: hsla(23, 93%, 45%, 0.568);
 $bg: rgb(255, 255, 255);
 
+//// FONT ////
 
 * {
     font-family: 'Roboto Mono', monospace;
-    
 }
+
+
+
+
+//// BACKGROUND ////
+.background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    top: 0;
+    left: 0;
+    filter: brightness(1.2);
+    filter:blur(0.3rem);
+    z-index: -2;
+}
+
+
+
+
+
+
 
 //// HEADER ////
 
@@ -49,15 +76,20 @@ $bg: rgb(255, 255, 255);
 //// HERO //// 
 
 .hero {
-    background-color: $primary-color;
+    
     display:flex;
     align-items: center;
     justify-content: center;
+    
     min-height: 40vh;
+    
 }
 
 .hero-wrapper {
     display: flex;
+    padding: 40px;
+    border-radius: 100px;
+    background-color: hsla(0, 18%, 3%, 0.623);
     margin-top: 50px;
     gap: 200px;
     align-items: center;
@@ -66,6 +98,7 @@ $bg: rgb(255, 255, 255);
 }
 
 .hero-text {
+    color: white;
     width: 500px;
 }
 
@@ -73,7 +106,7 @@ $bg: rgb(255, 255, 255);
     img {
         height: auto;
         width: 600px;
-        border: 10px solid $text-color;
+        border: $border;
         
         
     }
@@ -99,7 +132,8 @@ $bg: rgb(255, 255, 255);
 
 .hero {
     button {
-        color: $text-color !important;
+        color: white !important;
+        background-color: $button !important;
         text-transform: uppercase;
     }
 }
@@ -107,23 +141,29 @@ $bg: rgb(255, 255, 255);
 //// INFORMATION //// 
 
 .information {
+    color: white;
     min-height: 55vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: hsla(0, 18%, 3%, 0.623);
 }
 
 .information {
     img {
-        border: 10px solid #db5808;
+        border: 10px solid hsla(23, 93%, 45%, 0.486);
         border-radius: 20px;
         width: 180px;
     }
 }
 
 .information { 
+    
     h1 {
+        font-size: 2.5rem;
+        line-height: 2.5rem;
+        margin-bottom: 0;
         text-align: center;
         margin-bottom: 100px;
         font-weight: 700;
@@ -196,21 +236,32 @@ $bg: rgb(255, 255, 255);
 }
 
 .call-content {
-    background-color: $secondary-color;
+    color: white;
+    background-color: hsla(0, 18%, 3%, 0.623);
     border-radius: 40px;
     padding: 60px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     gap: 100px;
-}
 
-.call-content {
     button {
-        color: $secondary-color !important;
+        color: white !important;
+        background-color: $button !important;
         text-transform: uppercase;
     }
+    h3 {
+        font-size: 1.9rem;
+        font-weight: 800;
+    }
+    p {
+    
+        opacity: 80%;
+    }
 }
+
+
+
 //// FOOTER ////
 
 .footer {
