Start creating media queries

--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -271,3 +271,8 @@ $bg: rgb(255, 255, 255);
     align-items: center;
     background-color: $primary-color;
 }
+
+@media screen {
+    and (max-width: 1300px;)
+    
+}
